# Robotics_industrial_RL

./: .gitignore  README.md
rl_logs/: evaluations.npz
rl_logs/PPO_1/: events.out.tfevents.1773774224.genji-XPS-17-9720.42160.0
src/kr6_r900_cell/: CMakeLists.txt  package.xml
src/kr6_r900_cell/config/: dual_arm_controllers.yaml  gazebo_controllers.yaml  joint_limits.yaml  kinematics.yaml  moveit.rviz  moveit_controllers.yaml  ompl_planning.yaml
src/kr6_r900_cell/kr6_rl/: dashboard.py  eval_ppo.py  kr6_env.py  print_monitor.py  rl_vision_loop.py  train_ppo.py
src/kr6_r900_cell/launch/: display_moveit.launch.py  dual_arm_inspection.launch.py  dual_arm_moveit.launch.py  inspection_cell.launch.py
src/kr6_r900_cell/scripts/: dual_arm_dashboard.py  dual_arm_trajectory.py  joint_goal_trajectory.py  multi_box_inspector.py  pick_place_node.py  vacuum_controller.py  vision_pick_node.py  yolo_inspector_node.py
src/kr6_r900_cell/srdf/: kr6_dual_arm.srdf  kr6_r900_2.srdf
src/kr6_r900_cell/urdf/: kr6_dual_arm.urdf.xacro  kr6_r900_2.urdf.xacro  kr6_r900_macro.xacro  suction_cup.urdf.xacro
src/kr6_r900_cell/worlds/: inspection_cell.sdf
